--- a/budayakerja.html
+++ b/budayakerja.html
@@ -120,7 +120,7 @@
                                     <li><a href="#">SAKIP</a></li>
                                   </ul>
                                 </li>
-                              <!-- Removed Menu -->
+                              <!-- Removed Menu 
                                 <li class="nav-item">
                                   <a href="#" class="nav-link">Galeri</a>
                                 </li>
@@ -128,7 +128,7 @@
                                 <li class="nav-item">
                                   <a href="#" class="nav-link">Hubungi Kami</a>
                                 </li>
-                              <!-- Removed Menu End-->
+                              Removed Menu End-->
 
                               <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
