--- a/index-kosong.html
+++ b/index-kosong.html
@@ -141,9 +141,12 @@
                                   <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
                                 </ul>
                               </li>
+                              <!--
                               <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
-                              <li class="nav-item"><a class="btn" href="masuk.html"><!-- Modal Up-->
-                                <span class="btn btn-success" style="width: fit-content"> Masuk </span></a></li>
+                              <li class="nav-item"><a class="btn" href="masuk.html"> 
+                                  <span class="btn btn-success" style="width: fit-content"> Masuk </span></a>
+                              </li>
+                              -->
                             </ul>
                   </div>
                 </nav>
