--- a/index-kosong.html
+++ b/index-kosong.html
@@ -80,7 +80,7 @@
                   </div>
                   <!-- logo end -->
 
-                  <div class="site-navigation">
+                  <div class="site-navigation pl-5">
                     <div class="container">
                       <div class="row">
                         <div class="col-lg-12">
@@ -96,12 +96,12 @@
                                 </li>
         
                                 <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown">Tentang Kami <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="struktur.html">Struktur Organisasi</a></li>
-                                    <li><a href="budayakerja.html">Budaya Kerja</a></li>
-                                    <li><a href="tusi.html">Tugas dan Fungsi</a></li>
-                                    <li><a href="dasarhukum.html">Dasar Hukum</a></li>
+                                  <li><a href="tentangkami.html#profil">Profil Organisasi</a></li>
+                                  <li><a href="tentangkami.html#budayakerja">Budaya Kerja</a></li>
+                                  <li><a href="tentangkami.html#tusi">Tugas dan Fungsi</a></li>
+                                  <li><a href="tentangkami.html#dasarhukum">Dasar Hukum</a></li>
                                 </ul>
                                 </li>
         
