update alamat pustanda

--- a/tentangkami.html
+++ b/tentangkami.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Pustanda Berdaya | Beranda</title>
+    <title>Pustanda Bahagia | Tentang Kami</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
 
     <!-- Mobile Specific Metas
@@ -291,10 +291,10 @@
             <div class="row justify-content-between">
               <div class="col-lg-4 col-md-6 footer-widget footer-about">
                 <h3 class="widget-title">Hubungi Kami</h3>
-                <img loading="lazy" class="footer-logo" src="images/footer-logo.png" alt="Pustanda" />
+                <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
                 <p>Pusat Penguatan dan Pemberdayaan Bahasa<br />
-                  Jalan Raya .....<br />
-                  Sentul
+                  Jalan Anyar Km. 4, Sukahati, Citeureup<br />
+                  Kabupaten Bogor, Jawa Barat 16810
                 </p>
                 
                 <div class="footer-social">
