--- a/tentangkami.html
+++ b/tentangkami.html
@@ -275,7 +275,7 @@
           <!-- Budaya Kerja End-->
           <hr style="padding-top:1px;padding-bottom:1px;color: rgb(7, 48, 124);">
           <!-- Tugas Fungsi -->
-          <div id="tusi" class="row">
+          <div id="tusi" class="row" style="padding-top:70px;">
             <div class="col-lg-6">
               <h3 class="column-title" style="color:rgb(6, 82, 133);">Tugas dan Fungsi</h3>
               <p style="text-align: justify;">
