fixed top for menu, change image budaya kerja

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <body>
     <div class="body-inner">
       <!-- Header start -->
-      <header id="header" class="header-two">
+      <header id="header" class="header-two navbar-fixed">
         <div class="site-navigation">
           <div class="container">
             <div class="row">
@@ -195,7 +195,7 @@
       </header>
       <!--/ Header end -->
 
-      <div class="banner-carousel banner-carousel-2 mb-0">
+      <div class="banner-carousel banner-carousel-2 mb-0 mt-5 pt-5">
         <div class="banner-carousel-item" style="background-image: url(images/slider-main/bg1.jpg)">
           <div class="container">
             <div class="box-slider-content">
