--- a/tentangkami.html
+++ b/tentangkami.html
@@ -67,7 +67,7 @@
   <body>
     <div class="body-inner">
       <!-- Header start -->
-      <header id="header" class="header-two">
+      <header id="header" class="header-two navbar-fixed">
         <div class="site-navigation">
           <div class="container">
             <div class="row">
@@ -201,14 +201,14 @@
             <!-- Col end -->
           </div>
           <!-- Profil End-->
-          <hr style="padding-top:1px;padding-bottom:1px;color: rgb(7, 48, 124);">
+          <hr id="budayakerja" class="separator">
           <!-- Budaya Kerja -->
-          <div id="budayakerja" class="row pt-5">
-            <div class="col-lg-6 budaya-kerja">
+          <div class="row">
+            <div class="col-lg-6 vertical-center budaya-kerja">
             </div>
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
-              <h3 class="column-title">BUDAYA KERJA KEMENDIKBUDRISTEK</h3>
+              <h3 class="column-title" style="padding-top: 70px;color:rgb(6, 82, 133);">BUDAYA KERJA KEMENDIKBUDRISTEK</h3>
               <div class="row p-1">
                 <div class="col-lg-4 vertical-center keys">
                   MEMILIKI INTEGRITAS
@@ -273,11 +273,11 @@
             <!-- Col end -->
           </div>
           <!-- Budaya Kerja End-->
-          <hr style="padding-top:1px;padding-bottom:1px;color: rgb(7, 48, 124);">
+          <hr id="tusi" class="separator">
           <!-- Tugas Fungsi -->
-          <div id="tusi" class="row" style="padding-top:70px;">
+          <div class="row">
             <div class="col-lg-6">
-              <h3 class="column-title" style="color:rgb(6, 82, 133);">Tugas dan Fungsi</h3>
+              <h3 class="column-title" style="padding-top: 70px;color:rgb(6, 82, 133);">Tugas dan Fungsi</h3>
               <p style="text-align: justify;">
                 Berdasarkan Peraturan Menteri Pendidikan, Kebudayaan, Riset, dan Teknologi Nomor 28 Tahun 2021
                 maka tugas dan fungsi Pusat Penguatan dan Pemberdayaan Bahasa adalah sebagai berikut.<br />
