--- a/index-kosong.html
+++ b/index-kosong.html
@@ -67,12 +67,12 @@
   <body>
     <div class="body-inner">
       <!-- Header start -->
-      <header id="header" class="header-two">
+      <header id="header" class="header-two navbar-fixed">
         <div class="site-navigation">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <nav class="navbar navbar-expand-lg navbar-light navbar-fixed p-0">
+                <nav class="navbar navbar-expand-lg navbar-light  p-0">
                   <div class="logo-container">
                     <a href="index.html">
                       <img class="logo img-fluid" src="images/logo.png" alt="Pustanda">
