updating font awesome to v6.4, adding hubungikami, remove unused menu

--- a/hubungikami.html
+++ b/hubungikami.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Pustanda Bahagia | Tentang Kami</title>
+    <title>Pustanda Bahagia | Hubungi Kami</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
 
     <!-- Mobile Specific Metas
@@ -166,137 +166,38 @@
       <!--/ CONTENT START -->
       <section class="content">
         <div class="container">
-          <!-- Profil -->
-          <div id="profil" class="row">
+          <!-- Hubungi Kami -->
+          <div id="hubungikami" class="row">
             <div class="col-lg-6">
-              <h3 class="column-title" style="color:rgb(6, 82, 133);">PROFIL PUSAT PENGUATAN DAN PEMBERDAYAAN BAHASA</h3>
-              <p style="text-align: justify;">Pusat Penguatan dan Pemberdayaan Bahasa (Pustanda) merupakan satuan kerja 
-                baru setingkat eselon II di lingkungan Badan Pengembangan dan Pembinaan Bahasa, 
-                Kementerian Pendidikan, Kebudayaan, Riset, dan Teknologi.
-              </p>
-              <p style="text-align: justify;">Dalam pelaksanaan fungsi dan tugasnya, Pustanda memiliki dua Kelompok 
-                Kepakaran Layanan Profesional (KKLP) yaitu KKLP Bahasa Indonesia bagi Penutur Asing (BIPA)
-                dan KKLP Penerjemahan.</p>
-              <p>Lingkup Kegiatan Pustanda
-                <ul>
-                  <li>Fasilitasi pengembangan program bahasa Indonesia bagi Penutur Bahasa Asing (BIPA)</li>
-                  <li>Penerjemahan dan penjurubahasaan</li>
-                  <li>Fasilitasi penguasaan bahasa asing</li>
-                </ul>
-              </p>
+            <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
+            <p><strong>Pusat Penguatan dan Pemberdayaan Bahasa</strong><br />
+                Jalan Anyar Km. 4, Sukahati, Citeureup<br />
+                Kabupaten Bogor, Jawa Barat 16810
+            </p>
             </div>
             <!-- Col end -->
-            <div class="col-lg-6 mt-5 mt-lg-0" style="display:block;">
-              <div style="margin-right:0;margin-left:auto;align-items: right;">
-                <div>
-                  <img src="" height="200" width="200" alt="foto pa iwa" style="float:right;border: 1px solid gainsboro;">
+            <div class="col-lg-6 d-flex">
+                <div class="box-social">
+                    <a href="mailto:pustanda@kemdikbud.go.id" aria-label="mail">
+                        <i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 50px;"></i>
+                    </a>
                 </div>
-                <p>
-                  <h5 style="float:right;">Iwa Lukmana</h5>
-                  <h6 style="float:right;">Kepala Pusat Penguatan dan Pemberdayaan Bahasa</h6>
-                </p>
-              </div>
+                <div class="box-social">
+                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="Tiktok">
+                        <i class="fab fa-lg fa-instagram" style="color: #f10707;font-size: 50px;">
+                        </i>
+                    </a>
+                </div>
+                <div class="box-social">
+                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="Tiktok">
+                        <i class="fab fa-lg fa-tiktok" style="color: #4618b1;font-size: 50px;">
+                        </i>
+                    </a>
+                </div>
             </div>
             <!-- Col end -->
           </div>
-          <!-- Profil End-->
-          <hr id="budayakerja" class="separator">
-          <!-- Budaya Kerja -->
-          <div class="row">
-            <div class="col-lg-6 vertical-center budaya-kerja">
-            </div>
-            <!-- Col end -->
-            <div class="col-lg-6 mt-5 mt-lg-0">
-              <h3 class="column-title" style="padding-top: 70px;color:rgb(6, 82, 133);">BUDAYA KERJA KEMENDIKBUDRISTEK</h3>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  MEMILIKI INTEGRITAS
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                  Keselarasan antara pikiran, perkataan, dan perbuatan
-                </div>
-              </div>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  KREATIF DAN INOVATIF
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                Memiliki daya cipta, memiliki kemampuan untuk menciptakan hal baru 
-                yang berbeda dari yang sudah ada atau yang 
-                sudah dikenal sebelumnya (gagasan, metode, atau alat)
-                </div>
-              </div>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  INISIATIF
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                  Kemampuan seseorang untuk bertindak melebihi yang dibutuhkan
-                  atau yang dituntut dari pekerjaan
-                </div>
-              </div>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  PEMBELAJAR
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                  Selalu berusaha untuk mengembangkan kompetensi dan profesionalisme
-                </div>
-              </div>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  MENJUNJUNG METOKRASI
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                  Menjunjung tinggi keadilan dalam pemberian penghargaan
-                  bagi karyawan yang berkompeten
-                </div>
-              </div>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  TERLIBAT AKTIF
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                  Senantiasa berpartisipasi dalam setiap kegiatan
-                </div>
-              </div>
-              <div class="row p-1">
-                <div class="col-lg-4 vertical-center keys">
-                  TANPA PAMRIH
-                </div>
-                <div class="col-lg-8 vertical-center-left keys-info">
-                  Bekerja dengan tulus ikhlas dan penuh dedikasi
-                </div>
-              </div>
-            </div>
-            <!-- Col end -->
-          </div>
-          <!-- Budaya Kerja End-->
-          <hr id="tusi" class="separator">
-          <!-- Tugas Fungsi -->
-          <div class="row">
-            <div class="col-lg-6">
-              <h3 class="column-title" style="padding-top: 70px;color:rgb(6, 82, 133);">Tugas dan Fungsi</h3>
-              <p style="text-align: justify;">
-                Berdasarkan Peraturan Menteri Pendidikan, Kebudayaan, Riset, dan Teknologi Nomor 28 Tahun 2021
-                maka tugas dan fungsi Pusat Penguatan dan Pemberdayaan Bahasa adalah sebagai berikut.<br />
-                <ol>
-                  <li style="padding-left: 0px;">Penyiapan kebijakan teknis di bidang penguatan dan pemberdayaan bahasa</li>
-                  <li style="margin-left: 0;">Pelaksanaan penguatan dan pemberdayaan bahasa</li>
-                  <li style="margin-left: 0;">Pelaksanaan peningkatan fungsi Bahasa Indonesia menjadi bahasa internasional</li>
-                  <li style="margin-left: 0;">Pelaksanaan penyebaran bahasa negara</li>
-                  <li style="margin-left: 0;">Koordinasi dan fasilitasi pelaksanaan penguatan dan pemberdayaan bahasa</li>
-                  <li style="margin-left: 0;">Pemberian bimbingan teknis dan supervisi di bidang penguatan dan pemberdayaan bahasa</li>
-                  <li style="margin-left: 0;">Pemantauan, evaluasi, dan pelaporan di bidang penguatan dan pemberdayaan bahasa</li>
-                  <li style="margin-left: 0;">Pelaksaan urusan ketatausahaan Pusat</li>
-
-                </ol>
-              </p>
-            </div>
-          </div>
-          <!-- Tugas Fungsi End-->
-          <!-- Dasar Hukum -->
-          <!--/ Content row end -->
+          <!--Hubungi Kami end -->
         </div>
         <!--/ Container end -->
       </section>
