--- a/index-kosong.html
+++ b/index-kosong.html
@@ -118,15 +118,14 @@
                                     <li><a href="#">SAKIP</a></li>
                                   </ul>
                                 </li>
+
+                                <li class="nav-item">
+                                  <a href="hubungikami.html" class="nav-link">Hubungi Kami</a>
+                                </li>
                                 <!-- Removed Menu 
                                 <li class="nav-item">
                                   <a href="#" class="nav-link">Galeri</a>
                                 </li>
-            
-                                <li class="nav-item">
-                                  <a href="#" class="nav-link">Hubungi Kami</a>
-                                </li>
-                                Removed Menu End-->
 
                                 <li class="nav-item dropdown">
                                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
@@ -139,7 +138,7 @@
                                     <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
                                   </ul>
                                 </li>
-                                <!--
+
                                 <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
                                 <li class="nav-item"><a class="btn" href="masuk.html"> 
                                   <span class="btn btn-success" style="width: fit-content"> Masuk </span></a>
@@ -198,7 +197,7 @@
                   Kabupaten Bogor, Jawa Barat 16810
                 </p>
                 
-                <div class="footer-social">
+                <div class="footer-social" style="color:white;">
                   <ul>
                     <!-- <li>
                       <a href="https://facebook.com/themefisher" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
