add foto pa iwa (sementara)

--- a/hubungikami.html
+++ b/hubungikami.html
@@ -168,7 +168,8 @@
         <div class="container">
           <!-- Hubungi Kami -->
           <div id="hubungikami" class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12"><h3 style="text-align: center;">Hubungi Kami</h3> </div>
+            <div class="col-lg-4">
             <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
             <p><strong>Pusat Penguatan dan Pemberdayaan Bahasa</strong><br />
                 Jalan Anyar Km. 4, Sukahati, Citeureup<br />
@@ -176,22 +177,26 @@
             </p>
             </div>
             <!-- Col end -->
-            <div class="col-lg-6 d-flex">
+            <div class="col-lg-4">
                 <div class="box-social">
                     <a href="mailto:pustanda@kemdikbud.go.id" aria-label="mail">
-                        <i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 50px;"></i>
+                        <div class="social-text"><i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 50px;"></i>
+                        pustanda@kemdikbud.go.id</div>
                     </a>
                 </div>
                 <div class="box-social">
-                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="Tiktok">
-                        <i class="fab fa-lg fa-instagram" style="color: #f10707;font-size: 50px;">
+                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="instagram">
+                        <div class="social-text"><i class="fab fa-lg fa-instagram" style="color: #f10707;font-size: 50px;">
                         </i>
+                        Pustanda Kemdikbud</div>
                     </a>
                 </div>
                 <div class="box-social">
-                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="Tiktok">
-                        <i class="fab fa-lg fa-tiktok" style="color: #4618b1;font-size: 50px;">
-                        </i>
+                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="tiktok">
+                        <div class="social-text">
+                            <span><i class="fab fa-lg fa-tiktok" style="color: #4618b1;font-size: 50px;">
+                            </i>Pustanda Kemdikbud</span>
+                        </div>
                     </a>
                 </div>
             </div>
