--- a/tentangkami.html
+++ b/tentangkami.html
@@ -186,15 +186,21 @@
               </p>
             </div>
             <!-- Col end -->
-            <div class="col-lg-6 mt-5 mt-lg-0" style="display:block;">
-              <div style="margin-right:0;margin-left:auto;align-items: right;">
-                <div>
-                  <img src="" height="200" width="200" alt="foto pa iwa" style="float:right;border: 1px solid gainsboro;">
+            <div class="col-lg-6 mt-5 mt-lg-0">
+              <div style="row clearfix" style="background-image:url(images/projects/project3.jpg);">
+                  <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:70px;">
+                    <img src="./images/iwa.png" height="200" width="200" alt="foto pa iwa" style="overflow:hidden;border: 1px solid gainsboro;">
+                  </div>  
+              </div> 
+              <div class="clearfix row">
+                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:15px;">
+                  <span style="font-size: medium;font-weight:600;">Iwa Lukmana</h5>
                 </div>
-                <p>
-                  <h5 style="float:right;">Iwa Lukmana</h5>
-                  <h6 style="float:right;">Kepala Pusat Penguatan dan Pemberdayaan Bahasa</h6>
-                </p>
+              </div>
+              <div class="clearfix row" >
+                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;">
+                  <span style="font-size: small;font-weight: 400;">Kepala Pusat Penguatan dan Pemberdayaan Bahasa</h6>
+                </div>
               </div>
             </div>
             <!-- Col end -->
@@ -207,7 +213,7 @@
             </div>
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
-              <h3 class="column-title" style="padding-top: 70px;color:rgb(6, 82, 133);">BUDAYA KERJA KEMENDIKBUDRISTEK</h3>
+              <h3 class="column-title" style="text-align:center;padding-top: 70px;color:rgb(6, 82, 133);">BUDAYA KERJA KEMENDIKBUDRISTEK</h3>
               <div class="row p-1">
                 <div class="col-lg-4 vertical-center keys">
                   MEMILIKI INTEGRITAS
