--- a/tentangkami.html
+++ b/tentangkami.html
@@ -188,17 +188,17 @@
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
               <div style="row clearfix" style="background-image:url(images/projects/project3.jpg);">
-                  <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:70px;">
-                    <img src="./images/iwa.png" height="200" width="200" alt="foto pa iwa" style="overflow:hidden;border: 1px solid gainsboro;">
+                  <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:70px;height: 300px;">
+                    <img src="./images/iwa.png" alt="foto pa iwa" style="overflow:hidden;">
                   </div>  
               </div> 
               <div class="clearfix row">
-                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:15px;">
+                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:5px;">
                   <span style="font-size: medium;font-weight:600;">Iwa Lukmana</h5>
                 </div>
               </div>
               <div class="clearfix row" >
-                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;">
+                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:0px;">
                   <span style="font-size: small;font-weight: 400;">Kepala Pusat Penguatan dan Pemberdayaan Bahasa</h6>
                 </div>
               </div>
