--- a/hubungikami.html
+++ b/hubungikami.html
@@ -168,36 +168,55 @@
         <div class="container">
           <!-- Hubungi Kami -->
           <div id="hubungikami" class="row">
-            <div class="col-lg-12"><h3 style="text-align: center;">Hubungi Kami</h3> </div>
+            <div class="col-lg-12">
+              <h3 style="text-align: center;">Hubungi Kami</h3>
+            </div>
             <div class="col-lg-4">
-            <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
+              <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
             <p><strong>Pusat Penguatan dan Pemberdayaan Bahasa</strong><br />
                 Jalan Anyar Km. 4, Sukahati, Citeureup<br />
                 Kabupaten Bogor, Jawa Barat 16810
             </p>
             </div>
             <!-- Col end -->
-            <div class="col-lg-4">
+            <div class="col-lg-6">
+              <div class="box-social">
+                <div class="row">
+                  <div class="col-sm-2 vertical-center">
+                    <i class="fa-solid fa-phone" style="color: #6188cc;font-size: 50px;"></i>
+                  </div>
+                  <div class="col-sm-8 vertical-center-left" style="width:100px;">(62)(21) 29099245</div>
+                </div>
+              </div>
                 <div class="box-social">
                     <a href="mailto:pustanda@kemdikbud.go.id" aria-label="mail">
-                        <div class="social-text"><i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 50px;"></i>
-                        pustanda@kemdikbud.go.id</div>
-                    </a>
-                </div>
-                <div class="box-social">
-                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="instagram">
-                        <div class="social-text"><i class="fab fa-lg fa-instagram" style="color: #f10707;font-size: 50px;">
-                        </i>
-                        Pustanda Kemdikbud</div>
-                    </a>
-                </div>
-                <div class="box-social">
-                    <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="tiktok">
-                        <div class="social-text">
-                            <span><i class="fab fa-lg fa-tiktok" style="color: #4618b1;font-size: 50px;">
-                            </i>Pustanda Kemdikbud</span>
+                      <div class="row">
+                        <div class="col-sm-2 vertical-center">
+                          <i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 50px;"></i>
                         </div>
+                        <div class="col-sm-8 vertical-center-left" style="width:100px;">pustanda@kemdikbud.go.id</div>
+                      </div>
                     </a>
+                </div>
+                <div class="box-social">
+                  <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="instagram">
+                    <div class="row">
+                      <div class="col-sm-2 vertical-center">
+                        <i class="fab fa-lg fa-instagram" style="color: #fa1505;font-size: 50px;"></i>
+                      </div>
+                      <div class="col-sm-8 vertical-center-left">Pustanda Kemdikbud</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="box-social">
+                  <a href="https://www.tiktok.com/@pustandakemdikbud" aria-label="instagram">
+                    <div class="row">
+                      <div class="col-sm-2 vertical-center">
+                        <i class="fab fa-lg fa-tiktok" style="color: #7405cf;font-size: 50px;"></i>
+                      </div>
+                      <div class="col-sm-8 vertical-center-left">Pustanda Kemdikbud</div>
+                    </div>
+                  </a>
                 </div>
             </div>
             <!-- Col end -->
