--- a/tentangkami.html
+++ b/tentangkami.html
@@ -188,8 +188,12 @@
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
               <div style="row clearfix" style="background-image:url(images/projects/project3.jpg);">
-                  <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:70px;height: 300px;">
-                    <img src="./images/iwa.png" alt="foto pa iwa" style="overflow:hidden;">
+                  <div class="col-lg-12" style="display:flex;justify-content:center;align-item:center;padding-top:70px;height: 300px;">
+                    <img src="images/fathur.png" alt="ajudan 2 /Fathur" style="width:120px;height:120px;border-radius: 500px;">
+                    <br /><small><strong>Fathur (ajudan 1)</strong></small>
+                    <img src="./images/iwa.png" width="200" alt="foto pa iwa" >
+                    <img src="images/iik.png" alt="ajudan 1 / IIK" style="width:120px;height:120px;border-radius: 500px;">
+                    <br /><small><strong>Iik (ajudan 2)</strong></small>   
                   </div>  
               </div> 
               <div class="clearfix row">
