--- a/tentangkami.html
+++ b/tentangkami.html
@@ -187,25 +187,14 @@
             </div>
             <!-- Col end -->
             <div class="col-lg-6 mt-5 mt-lg-0">
-              <div style="row clearfix" style="background-image:url(images/projects/project3.jpg);">
-                  <div class="col-lg-12" style="display:flex;justify-content:center;align-item:center;padding-top:70px;height: 300px;">
-                    <img src="images/fathur.png" alt="ajudan 2 /Fathur" style="width:120px;height:120px;border-radius: 500px;">
-                    <br /><small><strong>Fathur (ajudan 1)</strong></small>
-                    <img src="./images/iwa.png" width="200" alt="foto pa iwa" >
-                    <img src="images/iik.png" alt="ajudan 1 / IIK" style="width:120px;height:120px;border-radius: 500px;">
-                    <br /><small><strong>Iik (ajudan 2)</strong></small>   
+              <div style="row clearfix">
+                  <div class="container">
+                    <figure style="text-align:center;padding-top:80px;">
+                      <img src="./images/iwa.png" width="200" alt="foto pa iwa" >
+                      <figcaption style="font-size: small;"><strong>Iwa Lukmana</strong><br />Kepala Pusat Penguatan dan Pemberdayaan Bahasa</figcaption>
+                    </figure>
                   </div>  
               </div> 
-              <div class="clearfix row">
-                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:5px;">
-                  <span style="font-size: medium;font-weight:600;">Iwa Lukmana</h5>
-                </div>
-              </div>
-              <div class="clearfix row" >
-                <div class="col-sm-12" style="display:flex;justify-content:center;align-item:center;padding-top:0px;">
-                  <span style="font-size: small;font-weight: 400;">Kepala Pusat Penguatan dan Pemberdayaan Bahasa</h6>
-                </div>
-              </div>
             </div>
             <!-- Col end -->
           </div>
