--- a/index.html
+++ b/index.html
@@ -339,114 +339,41 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h3 class="column-title">Kata Mereka tentang Pustanda</h3>
+              <h3 class="column-title"> </h3>
 
               <div id="testimonial-slide" class="testimonial-slide">
                 <div class="item">
-                  <div class="quote-item">
+                  <!--<div class="quote-item">
                     <span class="quote-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci soluta quas dolorum cumque rem est!
+                      
                     </span>
 
                     <div class="quote-item-footer">
-                      <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial1.png" alt="testimonial" />
+                      <img loading="lazy" class="testimonial-thumb" src="" alt="" />
                       <div class="quote-item-info">
-                        <h3 class="quote-author">Nadiem Anwar Makarim</h3>
-                        <span class="quote-subtext">Mendikbudristek</span>
+                        <h3 class="quote-author"> </h3>
+                        <span class="quote-subtext"> </span>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <!-- Quote item end -->
                 </div>
                 <!--/ Item 1 end -->
-
-                <div class="item">
-                  <div class="quote-item">
-                    <span class="quote-text">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitoa tion ullamco laboris nisi aliquip
-                      consequat.
-                    </span>
-
-                    <div class="quote-item-footer">
-                      <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial2.png" alt="testimonial" />
-                      <div class="quote-item-info">
-                        <h3 class="quote-author">Weldon Cash</h3>
-                        <span class="quote-subtext">CFO, First Choice</span>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- Quote item end -->
-                </div>
-                <!--/ Item 2 end -->
-
-                <div class="item">
-                  <div class="quote-item">
-                    <span class="quote-text">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitoa tion ullamco laboris nisi ut commodo
-                      consequat.
-                    </span>
-
-                    <div class="quote-item-footer">
-                      <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial3.png" alt="testimonial" />
-                      <div class="quote-item-info">
-                        <h3 class="quote-author">Minter Puchan</h3>
-                        <span class="quote-subtext">Director, AKT</span>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- Quote item end -->
-                </div>
-                <!--/ Item 3 end -->
               </div>
               <!--/ Testimonial carousel end-->
             </div>
             <!-- Col end -->
 
             <div class="col-lg-6 mt-5 mt-lg-0">
-              <h3 class="column-title">Mitra Pustanda</h3>
-
+              <h3 class="column-title"> </h3>
+              <!--
               <div class="row all-clients">
                 <div class="col-sm-4 col-6">
                   <figure class="clients-logo">
                     <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client1.png" alt="clients-logo" /></a>
                   </figure>
-                </div>
+                </div>-->
                 <!-- Client 1 end -->
-
-                <div class="col-sm-4 col-6">
-                  <figure class="clients-logo">
-                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client2.png" alt="clients-logo" /></a>
-                  </figure>
-                </div>
-                <!-- Client 2 end -->
-
-                <div class="col-sm-4 col-6">
-                  <figure class="clients-logo">
-                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client3.png" alt="clients-logo" /></a>
-                  </figure>
-                </div>
-                <!-- Client 3 end -->
-
-                <div class="col-sm-4 col-6">
-                  <figure class="clients-logo">
-                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client4.png" alt="clients-logo" /></a>
-                  </figure>
-                </div>
-                <!-- Client 4 end -->
-
-                <div class="col-sm-4 col-6">
-                  <figure class="clients-logo">
-                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client5.png" alt="clients-logo" /></a>
-                  </figure>
-                </div>
-                <!-- Client 5 end -->
-
-                <div class="col-sm-4 col-6">
-                  <figure class="clients-logo">
-                    <a href="#!"><img loading="lazy" class="img-fluid" src="images/clients/client6.png" alt="clients-logo" /></a>
-                  </figure>
-                </div>
-                <!-- Client 6 end -->
               </div>
               <!-- Clients row end -->
             </div>
@@ -457,7 +384,7 @@
         <!--/ Container end -->
       </section>
       <!-- Content end -->
-
+      <!--
       <section id="news" class="news">
         <div class="container">
           <div class="row text-center">
@@ -466,9 +393,9 @@
               <small>Info terkini tentang PUSTANDA</small>
 
             </div>
-          </div>
+          </div> -->
           <!--/ Title row end -->
-
+          <!--
           <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="latest-post">
@@ -485,11 +412,11 @@
                     <span class="post-item-date"> <i class="fa fa-clock-o"></i> 11 April, 2022 </span>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Latest post end -->
-            </div>
+            <!-- </div> -->
             <!-- 1st post col end -->
-
+            <!--
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="latest-post">
                 <div class="latest-post-media">
@@ -505,11 +432,11 @@
                     <span class="post-item-date"> <i class="fa fa-clock-o"></i> June 17, 2017 </span>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Latest post end -->
-            </div>
+            <!-- </div> -->
             <!-- 2nd post col end -->
-
+            <!--
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="latest-post">
                 <div class="latest-post-media">
@@ -525,19 +452,19 @@
                     <span class="post-item-date"> <i class="fa fa-clock-o"></i> Aug 13, 2017 </span>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Latest post end -->
-            </div>
+            <!-- </div> -->
             <!-- 3rd post col end -->
-          </div>
+          <!-- </div> -->
           <!--/ Content row end -->
-
+          <!--
           <div class="general-btn text-center mt-4">
             <a class="btn btn-primary" href="#">Lihat Semua Berita</a>
           </div>
-        </div>
+        </div> -->
         <!--/ Container end -->
-      </section>
+      <!-- </section> -->
       <!--/ News end -->
 
       <footer id="footer" class="footer bg-overlay">
@@ -574,7 +501,7 @@
                 <!-- Footer social end -->
               </div>
               <!-- Col end -->
-
+              <!--
               <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
                 <h3 class="widget-title">Jam Layanan</h3>
                 <div class="working-hours">
@@ -583,9 +510,9 @@
                   Senin -- Kamis: <span class="text-right">08:00 -- 16:00 </span> <br />
                   Jumat: <span class="text-right">08:00 -- 16:30</span> <br />
                   </div>
-              </div>
+              </div> -->
               <!-- Col end -->
-
+              <!--
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
                 <h3 class="widget-title">Layanan</h3>
                 <ul class="list-arrow">
@@ -595,7 +522,7 @@
                   <li><a href="#">Saran</a></li>
                   <li><a href="#">Whistle Blowing System (WBS)</a></li>
                 </ul>
-              </div>
+              </div>-->
               <!-- Col end -->
             </div>
             <!-- Row end -->
