--- a/hubungikami.html
+++ b/hubungikami.html
@@ -171,7 +171,7 @@
             <div class="col-lg-12">
               <h3 style="text-align: center;">Hubungi Kami</h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-5">
               <img loading="lazy" class="footer-logo" src="images/logo.png" alt="Pustanda" />
             <p><strong>Pusat Penguatan dan Pemberdayaan Bahasa</strong><br />
                 Jalan Anyar Km. 4, Sukahati, Citeureup<br />
@@ -179,45 +179,53 @@
             </p>
             </div>
             <!-- Col end -->
-            <div class="col-lg-6">
-              <div class="box-social">
+            <div class="col-lg-4">
+              <div class="box-social-wrap">
                 <div class="row">
-                  <div class="col-sm-2 vertical-center">
-                    <i class="fa-solid fa-phone" style="color: #6188cc;font-size: 50px;"></i>
+                  <div class="col-sm-1 box-social">
+                    <i class="fa-solid fa-phone" style="color: #6188cc;font-size: 30px;"></i>
                   </div>
-                  <div class="col-sm-8 vertical-center-left" style="width:100px;">(62)(21) 29099245</div>
+                  <div class="col-sm-8 box-social box-social-text">(62)(21) 29099245</div>
                 </div>
               </div>
-                <div class="box-social">
+                <div class="box-social-wrap">
                     <a href="mailto:pustanda@kemdikbud.go.id" aria-label="mail">
-                      <div class="row">
-                        <div class="col-sm-2 vertical-center">
-                          <i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 50px;"></i>
+                      <div class="row box-social">
+                        <div class="col-sm-1 box-social">
+                          <i class="fa-solid fa-envelope fa-lg fa-fw" style="color: #9fb2be;font-size: 30px;"></i>
                         </div>
-                        <div class="col-sm-8 vertical-center-left" style="width:100px;">pustanda@kemdikbud.go.id</div>
+                        <div class="col-sm-8 box-social box-social-text">pustanda@kemdikbud.go.id</div>
                       </div>
                     </a>
                 </div>
-                <div class="box-social">
+                <div class="box-social-wrap">
                   <a href="https://www.instagram.com/pustandakemdikbud/" aria-label="instagram">
                     <div class="row">
-                      <div class="col-sm-2 vertical-center">
-                        <i class="fab fa-lg fa-instagram" style="color: #fa1505;font-size: 50px;"></i>
+                      <div class="col-sm-1 box-social">
+                        <i class="fab fa-lg fa-instagram" style="color: #fa1505;font-size: 30px;"></i>
                       </div>
-                      <div class="col-sm-8 vertical-center-left">Pustanda Kemdikbud</div>
+                      <div class="col-sm-8 box-social box-social-text">Pustanda Kemdikbud</div>
                     </div>
                   </a>
                 </div>
-                <div class="box-social">
-                  <a href="https://www.tiktok.com/@pustandakemdikbud" aria-label="instagram">
+                <div class="box-social-wrap">
+                  <a href="https://www.tiktok.com/@pustandakemdikbud" aria-label="tiktok">
                     <div class="row">
-                      <div class="col-sm-2 vertical-center">
-                        <i class="fab fa-lg fa-tiktok" style="color: #7405cf;font-size: 50px;"></i>
+                      <div class="col-sm-1 box-social">
+                        <i class="fab fa-lg fa-tiktok" style="color: #7405cf;font-size: 30px;"></i>
                       </div>
-                      <div class="col-sm-8 vertical-center-left">Pustanda Kemdikbud</div>
+                      <div class="col-sm-8 box-social box-social-text">Pustanda Kemdikbud</div>
                     </div>
                   </a>
                 </div>
+            </div>
+            <!-- Col end -->
+            <div class="col-lg-3">
+              <div class="container vertical-center">
+                <figure><img src="images/fathur.png" width="100%" alt="Gambar" />
+                  <figcaption style="font-size:small;text-align: center;">Ajudan 1 / Fathur</figcaption>
+                </figure>
+              </div>
             </div>
             <!-- Col end -->
           </div>
