changing temporary picture

--- a/hubungikami.html
+++ b/hubungikami.html
@@ -222,8 +222,10 @@
             <!-- Col end -->
             <div class="col-lg-3">
               <div class="container vertical-center">
-                <figure><img src="images/fathur.png" width="100%" alt="Gambar" />
-                  <figcaption style="font-size:small;text-align: center;">Ajudan 1 / Fathur</figcaption>
+                <figure><img src="images/mvp.jpeg" width="100%" alt="Gambar" />
+                  <figcaption style="font-size:small;text-align: center;">the Most Valuable Person <br />
+                    <strong>Harry Intifada</strong>
+                  </figcaption>
                 </figure>
               </div>
             </div>
