--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    Designed by Ladislaus Laga Monang and <a href="https://www.linkedin.com/in/ferry-yun-kurniawan-20bb5216b/">Ferry Yun Kurniawan</a></span
+                    Dikembangkan oleh Ladislaus Laga Monang dan <a href="https://www.linkedin.com/in/ferry-yun-kurniawan-20bb5216b/">Ferry Yun Kurniawan</a></span
                   >
                 </div>
               </div>
