--- a/heading.html
+++ b/heading.html
@@ -1,84 +1,70 @@
-      <header id="header" class="header-two">
-        <div class="site-navigation">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <nav class="navbar navbar-expand-lg navbar-light p-0">
-                  <div class="logo-container">
-                    <a href="index.html">
-                      <img class="logo img-fluid" src="images/logo.png" alt="Pustanda">
-                    </a>
-                  </div>
-                  <!-- logo end -->
-
-                  <div class="site-navigation">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <nav class="navbar navbar-expand-lg navbar-dark p-0">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-                              <span class="navbar-toggler-icon"></span>
-                            </button>
-
-                  <div id="navbar-collapse" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav ml-auto align-items-center">
-                      <li class="nav-item active">
-                        <a href="index.html" class="nav-link">Beranda </a>
-                      </li>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Profil <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="struktur.html">Struktur Organisasi</a></li>
-                          <li><a href="budayakerja.html">Budaya Kerja</a></li>
-                          <li><a href="tusi.html">Tugas dan Fungsi</a></li>
-                          <li><a href="dasarhukum.html">Dasar Hukum</a></li>
-                        </ul>
-                      </li>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="https://bipadaring.kemdikbud.go.id" target="_blank">BIPA</a></li>
-                          <li><a href="https://penerjemahan.kemdikbud.go.id" target="_blank">Penerjemahan</a></li>
-                        </ul>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">Galeri</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">Berita</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">Hubungi Kami</a>
-                      </li>
-
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Zona Integritas <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Manajemen Perubahan</a></li>
-                          <li><a href="#">Penataan Tata Laksana</a></li>
-                          <li><a href="#">Penataan Sistem Manajemen SDM</a></li>
-                          <li><a href="#">Penguatan Akuntabilitas Kinerja</a></li>
-                          <li><a href="#">Penguatan Pengawasan</a></li>
-                          <li><a href="#">Penguatan Kualitas Pelayanan Publik</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item"><a class="nav-link" href="#">Pengaduan</a></li>
-                      <li class="nav-item"><a class="btn" href="masuk.html"><!-- Modal Up-->
-                        <span class="btn btn-success" style="width: fit-content"> Masuk </span></a></li>
-                    </ul>
-                  </div>
-                </nav>
-              </div>
-              <!--/ Col end -->
-            </div>
-            <!--/ Row end -->
+<div class="site-navigation">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <nav class="navbar navbar-expand-lg navbar-light  p-0">
+          <div class="logo-container">
+            <a href="index.html">
+              <img class="logo img-fluid" src="images/logo.png" alt="Pustanda">
+            </a>
           </div>
-          <!--/ Container end -->
-        </div>
-        <!--/ Navigation end -->
-      </header>
+          <!-- logo end -->
+          <div class="site-navigation pl-5">
+            <div class="container ">
+              <div class="row">
+                <div class="col-lg-12 ">
+                  <nav class="navbar navbar-expand-lg navbar-dark p-0">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div id="navbar-collapse" class="collapse navbar-collapse">
+                      <ul class="nav navbar-nav ml-auto align-items-center">
+                        <li class="nav-item active">
+                        <a href="index.html" class="nav-link">Beranda </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" data-toggle="dropdown">Tentang Kami <i class="fa fa-angle-down"></i></a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="tentangkami.html">Profil Organisasi</a></li>
+                            <li><a href="tentangkami.html#budayakerja">Budaya Kerja</a></li>
+                            <li><a href="tentangkami.html#tusi">Tugas dan Fungsi</a></li>
+                            <!-- <li><a href="tentangkami.html#dasarhukum">Dasar Hukum</a></li> -->
+                          </ul>
+                        </li>
+  
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" data-toggle="dropdown">Layanan <i class="fa fa-angle-down"></i></a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="https://bipa.kemdikbud.go.id/portal" target="_blank">BIPA</a></li>
+                            <li><a href="https://penerjemahan.kemdikbud.go.id" target="_blank">Penerjemahan</a></li>
+                          </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Informasi <i class="fa fa-angle-down"></i></a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">SAKIP</a></li>
+                          </ul>
+                        </li>
+
+                        <li class="nav-item">
+                          <a href="hubungikami.html" class="nav-link">Hubungi Kami</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </div>      
+        </nav>
+      </div>
+      <!--/ Col end -->
+    </div>
+    <!--/ Row end -->
+  </div>
+  <!--/ Container end -->
+</div>
+<!--/ Navigation end -->
