--- a/tentangkami.html
+++ b/tentangkami.html
@@ -39,7 +39,7 @@
               <div style="row clearfix">
                   <div class="container">
                     <figure style="text-align:center;padding-top:80px;">
-                      <img src="./images/iwa.png" width="200" alt="foto pa iwa" >
+                      <img src="images/iwa.png" width="200" alt="foto pa iwa" >
                       <figcaption style="font-size: small;"><strong>Iwa Lukmana</strong><br />Kepala Pusat Penguatan dan Pemberdayaan Bahasa</figcaption>
                     </figure>
                   </div>  
